fix spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -311,6 +311,11 @@ body {
   font-weight: bold;
   margin-right: 2%;
 }
+
+.featured-price-div {
+  margin-top: 3%;
+}
+
 .pinline {
   text-align: center;
   display: block;
@@ -354,6 +359,7 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
 #map {
 	height: 60%;
 }
